tests/cases/errors/real_case_equality_unsupported/main.sv
module Top;
  real a, b;
  bit r;
  initial r = (a === b);
endmodule
